--- a/sass/_notice.scss
+++ b/sass/_notice.scss
@@ -21,6 +21,7 @@
 .notice__swiper {
   width: 100%;
   height: 286px;
+  overflow: hidden;
 }
 
 .notice__swiper-slide {
